test/parser/cases/valid/small/imports_and_empty.cp
import math;
import flow.demo;

main()
{
}
