test/parser/cases/invalid/small/for_missing_colon.cp
main()
{
    for(let value values) {
        return;
    }
}
